# QualityPipelines

./: #indicators_rs_infrastructure.json#  .gitignore  .mailmap  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  action.yml  codemeta.json  example.json  indicators_analysis_code.json  indicators_prototype_tools.json  indicators_rs_infrastructure.json  mkdocs.yml  pyproject.toml  resqui_summary.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  plugin_or_indicator_request.yml  question.yml
.github/workflows/: docs.yml  pypi.yml  resqui.yml  test.yml
configurations/: complete.json  elixir_configuration.json  hsf_configuration.json  oebfair-indicators.json  ossr_configuration.json  skao_configuration.json
configurations/practical-smp-escience-center/: readme.md  smp-escience-high.json  smp-escience-low.json  smp-escience-medium.json
docs/: index.md
docs/explanation/: architecture.md  indicators.md  plugins.md
docs/how-to/: add-a-plugin.md  ci-integration.md  custom-configuration.md
docs/reference/: api.md  cli.md  configuration.md
docs/tutorials/: first-assessment.md
resqui/: README.md  example.json  pyproject.toml  run_tests.py
resqui/src/resqui/: cli.py  plugins.py
src/resqui/: api.py  cli.py  config.py  core.py  docopt.py  indicators.py  plugins.py  tools.py  workspace.py
src/resqui/executors/: __init__.py  (+3 more)
tests/: runtests.py  test_cli.py  test_config.py  test_core.py  test_executors.py  test_plugins.py  test_plugins_workspace.py  test_tools.py  test_workspace.py
(+9 files in other folders)
